利用ViewPager滑动上下屏页面

--- a/翻译历史记录.md
+++ b/翻译历史记录.md
@@ -36,3 +36,7 @@ behavior : 习性,行为,品性,
 Herd behavior : 羊群行为,羊群效应,从众行为,
 Animal Behavior : 动物行为,动物行为学,家畜行为,
 ```
+- Default Transformer
+```
+默认的变压器;
+```
